--- a/Programming.html
+++ b/Programming.html
@@ -20,7 +20,8 @@
         <h1>All my Projects: </h1>
             
         <hr>
-        <p>Project no. 1 <Br> My earliest project where i had to throw a trash can at some old lady. <br> I have to say.. it wasnt easy.</p>
+        <h1>W.I.P</h1>
+        <p>I'm still adding my stuff here so.. one of my projects is my website lol <br> That's just one of my favorite youtubers</p>
         <div class="zdjecia">
             
             <div class="podzdjecie"> <iframe  class="zdj2" src="https://www.youtube.com/embed/MRhuibSKZkE?" ></iframe> </div>
